solver/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solver
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: solver
  template:
    metadata:
      labels:
        app: solver
    spec:
      ServiceAccountName: solver
      containers:
        - name: solver
          image: ghcr.io/pmh-only/solver:latest
          volumeMounts:
            - mountPath: /data
              name: solver-pvc
            - name: docker-sock
              mountPath: /var/run
        - name: dind
          image: docker:29-dind
          securityContext:
            privileged: true
          args:
            - --host=unix:///var/run/docker.sock
          volumeMounts:
            - name: docker-sock
              mountPath: /var/run
      volumes:
        - name: solver-pvc
          persistentVolumeClaim:
            claimName: solver-pvc
        - name: docker-sock
          emptyDir: {}
