solver/service.yml
apiVersion: v1
kind: Service
metadata:
  name: solver-service
spec:
  selector:
    app: solver
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
